# object-storage-proxy

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test_server.py
src/: lib.rs  main.rs
src/credentials/: mod.rs  secrets_proxy.rs
src/parsers/: credentials.rs  mod.rs  path.rs
src/utils/: creds.rs  mod.rs  validator.rs
