[package]
name = "object-storage-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
prometheus = "0.14.0"
clap = { version = "4.5.36", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
pingora = { version = "0.4.0", features = ["proxy", "openssl"] }
futures = "0.3.31"
http = "1.3.1"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
nom = "8.0.0"
